plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/OnlyFirstOccurenceIsNotHighlighted.groovy
import java.util.Date
<error descr="Name 'Date' is already defined in file">import java.sql.Date</error>
<error descr="Name 'Date' is already defined in file">import static foo.Bar.Date</error>

<error descr="Name 'Date' is already defined in file">class Date {}</error>

<error descr="Name 'Date' is already defined in file">trait Date {}</error>